<resources>
    <string name="app_name">AppGermanTanks</string>


    <!-- Fragment Splash-->
    <string name="logo_name_splash_screen">СПРАВОЧНИК \n БРОНЕТЕХНИКА ГЕРМАНИИ\n (1930–1945)</string>
    <string name="nameTextMain">Бронетехника Германии (1935–1945)</string>
    <!-- Fragment Splash-->


    <!-- Fragment Info-->
    <string name="stars">Оценить приложение</string>
    <string name="info_version">Бронетехника Германии</string>
    <string name="info_version2">версия 1.4.0</string>
    <string name="info_4">По вопросам сотрудничества</string>
    <string name="info_5">tomas0dft@gmail.com</string>
    <string name="info_1">«Бронетехника Германии» — приложение, основной задачей которого является изучение военной техники. Использование нацистской атрибутики и символики формирует негативное отношение к идеологии нацизма, без пропаганды и оправдания нацизма.
Основной материал взят: [Электронный ресурс]: Википедия. Свободная энциклопедия. – https://ru.wikipedia.org/wiki/</string>
    <!-- Fragment Info-->


    <!-- Fragment TestMain-->
    <string name="test_title_1">Выберите из двух вариантов\nнемецкую бронетехнику</string>
    <string name="test_title_11">Выберите из двух вариантов немецкую бронетехнику. Чтобы пройти уровень необходимо заполнить шкалу прогресса.
         За каждый правильный ответ шкала увеличивается на 1 ед. За неправильный ответ - уменьшается на 1 ед.</string>
    <string name="test_title_12">Выберите верный ответ\nиз двух вариантов.\nУровень не пройден если допущена хоть одна ошибка.\nВопросы могут повторяться.</string>
    <string name="test_title_13">Выберите верный ответ\nиз четырех вариантов.\nУровень не пройден если допущены три ошибки.\nВопросы могут повторяться.</string>
    <string name="test_title_2">Выберите из двух вариантов\nверный ответ</string>
    <string name="test_title_3">Выберите из четырех вариантов\nверный ответ</string>
    <string name="test_activity_start_score">ПОСЛЕДНИЙ РЕЗУЛЬТАТ: 00:00</string>
    <string name="test_activity_start_score2">УРОВЕНЬ НЕ ПРОЙДЕН</string>
    <string name="test_activity_start_score_endwin">УРОВЕНЬ ПРОЙДЕН</string>
    <string name="test_main_choise">ВЫБЕРИТЕ УРОВЕНЬ СЛОЖНОСТИ</string>
    <!-- Fragment TestMain-->


    <!-- Fragment TestEasy-->
    <string name="bt_exit">ВЫХОД</string>
    <!-- Fragment TestEasy-->


    <!-- Fragment TestMedium-->
    <string name="test_med1">СЧЕТ:</string>
    <string name="test_med2">0</string>
    <string name="test_med3">1/20</string>
    <!-- Fragment TestMedium-->


</resources>