<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorText"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back_testhard"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="30"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/bt_exit"
                android:textAlignment="center"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/textScoreHardTest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="30"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|end"
                android:text="@string/test_med1"
                android:textColor="@color/color_chronometr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textScoreHardTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="15"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:text="@string/test_med2"
                android:textColor="@color/color_chronometr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textReqHardScore"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="1/32"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_hint"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="7"
                android:scaleType="centerCrop"
                android:src="@drawable/img_test_hard" />

            <TextView
                android:id="@+id/textViewLife"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="10"
                android:gravity="start|center_vertical"
                android:text="3"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_weight="100"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewTanksHard"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:layout_weight="50"
                android:scaleType="fitCenter" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:background="@drawable/button_style"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:background="@drawable/button_style"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:background="@drawable/button_style"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:background="@drawable/button_style"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>